--- a/style.css
+++ b/style.css
@@ -1,37 +1,80 @@
 body 
 {
-    font-family: Arima;
     background-color: #fff6e0;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: scroll;
-    height: 2020px;
+    height: 100vh;
     width: 100%;
-    margin: 0;
+    margin: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
+    font-family: Amatic SC;
 }
 h1 
 {
-    font-size: 50px;
+    font-size: 11vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 10vh;
-    margin-top: 5vh;
+    height: 10vw;
+    margin-top: 14%;
     color: rgb(255, 255, 255);
     z-index: 2;
     position: relative;
 }
 .square 
 {
-    width: 90%;
+    width: 100%;
     height: 20vh;
     background-color: #ff9100;
-    margin: auto;
     z-index: 1;
-    border-radius: 10px;
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 2vh;
+    padding-left: 0;
+    border-radius: 0;
+    margin-left: -0.85%;
 }
+
+.amatic-sc-regular {
+    font-family: "Amatic SC", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .amatic-sc-bold {
+    font-family: "Amatic SC", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  
+  ul {
+    list-style-type: none;
+    margin-top: 11%;
+    margin-left: -5px;
+    padding: 0;
+    width: 5%;
+    background-color: #ffaf46;
+    position: fixed;
+    height: 50%;
+    z-index: 2;
+    border-radius: 10px;
+  }
+  
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  
+  li a:hover:not(.active) {
+    background-color: #555;
+    color: white;
+    border-radius: 10px;
+  }
