--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*{
+  margin: 0;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
 body 
 {
     background-color: #fff6e0;
@@ -30,13 +36,11 @@ h1
     height: 20vh;
     background-color: #ff9100;
     z-index: 1;
-    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-left: 0;
     border-radius: 0;
-    margin-left: -0.85%;
 }
 
 .amatic-sc-regular {
@@ -78,3 +82,12 @@ h1
     color: white;
     border-radius: 10px;
   }
+  
+  @media screen and (max-width: 720px) {
+      .square {
+        
+    }
+  }
+
+  
+  
