--- a/Front_page.css
+++ b/Front_page.css
@@ -6,7 +6,7 @@
 }
 body 
 {
-    background-color: #fff6e0;
+    background-color: #fef5ed;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -18,7 +18,7 @@ body
     margin-right: 0px;
     font-family: Amatic SC;
 }
-h1 
+h1
 {
     font-size: 11vw;
     display: flex;
@@ -26,21 +26,39 @@ h1
     align-items: center;
     height: 10vw;
     margin-top: 14%;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     z-index: 2;
     position: relative;
 }
 .square 
 {
-    width: 100%;
-    height: 20vh;
-    background-color: #ff9100;
+    width: 50%;
+    height: 100vh;
+    background-color: #c69c6d;
     z-index: 1;
     display: flex;
     justify-content: center;
     align-items: center;
     padding-left: 0;
     border-radius: 0;
+    right: 0;
+    position: fixed;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button-link {
+  display: inline-block;
+  padding: 25px 88px;
+  background-color: #fef5ed;
+  color: #c69c6d;
+  text-decoration: none;
+  border-radius: 25px;
+  font-size: 85px;
+  transition: background-color 0.3s ease;
 }
 
 .amatic-sc-regular {
@@ -55,8 +73,15 @@ h1
     font-style: normal;
   }
   
-  
-  ul {
+  .img {
+    transform: translateY(5%);
+    width: 50vw;
+    height: auto;
+    z-index: 1;
+    top: 0;
+    left: 0;
+  }
+  /*ul {
     list-style-type: none;
     margin-top: 11%;
     margin-left: -5px;
@@ -81,13 +106,12 @@ h1
     background-color: #555;
     color: white;
     border-radius: 10px;
-  }
+  } */
   
-  @media screen and (max-width: 720px) {
+  /*@media screen and (max-width: 720px) {
       .square {
         
     }
-  }
+  }*/
 
-  
   
