--- a/StartPage.css
+++ b/StartPage.css
@@ -51,13 +51,14 @@ h1
     justify-content: center;
     align-items: center;
 }
+
 .button-link {
   display: inline-block;
   padding: 25px 88px;
   background-color: #fef5ed;
   color: #c69c6d;
   text-decoration: none;
-  border-radius: 25px;
+  border-radius: 45px;
   font-size: 85px;
   transition: background-color 0.3s ease;
 }
@@ -65,6 +66,61 @@ h1
 .button-link:hover {
   background-color: #e0c9a6;
 }
+
+.SuggestionButton {
+  position: absolute;
+  top: 90vh;
+  left: 80%;
+  z-index: 2;
+}
+.SuggestionButton-link {
+  display: inline-block;
+  padding: 6px 28px;
+  padding-left: 80px;
+  background-color: #fef5ed;
+  color: #c69c6d;
+  text-decoration: none;
+  border-radius: 90px;
+  font-size: 40px;
+  transition: background-color 0.3s ease;
+}
+
+.SuggestionButton-link:hover {
+  background-color: #e0c9a6;
+}
+
+.img2 {
+  width: 50px;
+  height: auto;
+  z-index: 1;
+  position: absolute;
+  top: 90.7vh;
+  left: 81%;
+  z-index: 2;
+}
+
+/*.AccountButton {
+  position: absolute;
+  top: 90vh;
+  left: 80%;
+  z-index: 2;
+}
+.AccountButton-link {
+  display: inline-block;
+  padding: 6px 28px;
+  padding-left: 80px;
+  background-color: #fef5ed;
+  color: #c69c6d;
+  text-decoration: none;
+  border-radius: 90px;
+  font-size: 40px;
+  transition: background-color 0.3s ease;
+}
+
+.AccountButton-link:hover {
+  background-color: #e0c9a6;
+}
+  */
 
 .amatic-sc-regular {
     font-family: "Amatic SC", serif;
