--- a/Index.css
+++ b/Index.css
@@ -147,7 +147,7 @@ body
   padding: 10px;
   text-decoration: none;
   display: block;
-  font-family: 'Hanyaboly';
+  font-family: 'Hangyaboly';
 }
   
 .account-dropdown a:hover {
