--- a/MainPage.css
+++ b/MainPage.css
@@ -73,6 +73,63 @@ h1
   align-items: center;
 }
 
+
+.button-menu{
+  display: inline-block;
+  padding: 10px 66px;
+  margin-left: 44px;
+  background-color: #fef5ed;
+  color: #c69c6d;
+  text-decoration: none;
+  border-radius: 25px;
+  font-size: 50px;
+  transition: background-color 0.3s ease;
+  font-family: 'Hangyaboly';
+  border: none;
+}
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+
+.button-dropdown {
+  display: none;
+  position: absolute;
+  background-color: #fef5ed;
+  min-width: 200px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  padding: 10px;
+  z-index: 1000;
+}
+
+
+.button-dropdown a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #c69c6d;
+  font-size: 24px;
+}
+
+
+.button-dropdown a:hover {
+  background-color: #e0c9a6;
+}
+
+
+.dropdown:hover .button-dropdown {
+  display: block;
+}
+
+
+
+
+
+
 .button-link {
   display: inline-block;
   padding: 10px 66px;
@@ -99,4 +156,19 @@ h1
   top: 20%;
   left: 27%;
   border-radius: 40px;
+}
+#restaurant-info {
+  position: absolute;
+  left: 30px;
+  top: 200px;
+  width: 350px;
+  height: auto;
+  background: white;
+  padding: 15px;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+  border-radius: 5px;
+  display: none; 
+  z-index: 1000;
+  word-wrap: break-word;
+  font-size: 32px;
 }
