--- a/AboutUsPage.css
+++ b/AboutUsPage.css
@@ -1,163 +1,208 @@
 *{
-    margin: 0;
-    padding: 0;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  @font-face {
-    font-family: 'Hangyaboly';
-    src: url('https://font-public.canva.com/YADiq7Ys73A/0/Hangyaboly-Regular_fix482404332371740184.2b0f92b24364eee9a859be106528c3fe.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
-  body 
-  {
-    background-color: #fef5ed;  
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: scroll;
-    height: 100vh;
-    width: 100%;
-    margin: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    font-family: 'Hangyaboly';
-    overflow: hidden;
-  }
-  h1
-  {
-    font-size: 11vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 10vw;
-    margin-top: 14%;
-    color: rgb(0, 0, 0);
-    z-index: 2;
-    position: relative;
-  }
+  margin: 0;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
+}
+@font-face {
+  font-family: 'Hangyaboly';
+  src: url('https://font-public.canva.com/YADiq7Ys73A/0/Hangyaboly-Regular_fix482404332371740184.2b0f92b24364eee9a859be106528c3fe.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+body {
+  background-color: #fef5ed;  
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: scroll;
+  height: 200vh;
+  width: 100%;
+  margin: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  font-family: 'Hangyaboly';
+  overflow: hidden;
+}
+h1
+{
+  font-size: 11vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 10vw;
+  margin-top: 14%;
+  color: rgb(0, 0, 0);
+  z-index: 2;
+  position: relative;
+}
   
-  .square {
-    width: 97.2%;
-    margin-left: 1.4%;
-    top: 21px;
-    height: 15vh;
-    background-color: #c69c6d;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0px;
-    position: fixed;
-    border-radius: 45px;
-  }
+.square {
+  width: 97.2%;
+  margin-left: 1.4%;
+  top: 21px;
+  height: 15vh;
+  background-color: #c69c6d;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 0px;
+  position: absolute;
+  border-radius: 45px;
+}
   
-  .container {
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 220px;
-  }
+.container {
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 220px;
+}
   
-  .container img {
-    border-radius: 100px;
-    width: 65%;
-    height: auto;
-  }
+.container img {
+  border-radius: 100px;
+  width: 65%;
+  height: auto;
+}
   
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  
-  .button-menu{
-    display: inline-block;
-    padding: 10px 66px;
-    margin-left: 44px;
-    background-color: #fef5ed;
-    color: #c69c6d;
-    text-decoration: none;
-    border-radius: 25px;
-    font-size: 50px;
-    transition: background-color 0.3s ease;
-    font-family: 'Hangyaboly';
-    border: none;
-  }
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   
   
-  .dropdown {
-    position: relative;
-    display: inline-block;
-  }
+.button-menu{
+  display: inline-block;
+  padding: 10px 66px;
+  margin-left: 44px;
+  background-color: #fef5ed;
+  color: #c69c6d;
+  text-decoration: none;
+  border-radius: 25px;
+  font-size: 50px;
+  transition: background-color 0.3s ease;
+  font-family: 'Hangyaboly';
+  border: none;
+}
   
   
-  .button-dropdown {
-    display: none;
-    position: absolute;
-    background-color: #fef5ed;
-    min-width: 200px;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    padding: 10px;
-    z-index: 1000;
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+  
+  
+.button-dropdown {
+  display: none;
+  position: absolute;
+  background-color: #fef5ed;
+  min-width: 200px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  padding: 10px;
+  z-index: 1000;
   right: 0;
-  }
+}
   
   
-  .button-dropdown a {
-    display: block;
-    padding: 10px;
-    text-decoration: none;
-    color: #c69c6d;
-    font-size: 24px;
-  }
+.button-dropdown a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #c69c6d;
+  font-size: 24px;
+}
   
   
-  .button-dropdown a:hover {
-    background-color: #e0c9a6;
-  }
+.button-dropdown a:hover {
+  background-color: #e0c9a6;
+  border-radius: 15px;
+}
   
   
-  .dropdown:hover .button-dropdown {
-    display: block;
-  }
+.dropdown:hover .button-dropdown {
+  display: block;
+}
   
+.button-link {
+  display: inline-block;
+  padding: 10px 66px;
+  margin-left: 44px;
+  background-color: #fef5ed;
+  color: #c69c6d;
+  text-decoration: none;
+  border-radius: 25px;    
+  font-size: 50px;
+  transition: background-color 0.3s ease;
+}
+  
+.button-link:hover {
+  background-color: #e0c9a6;
+  transform: scale(1.05);
+} 
 
-  
-  
-  
-  .button-link {
-    display: inline-block;
-    padding: 10px 66px;
-    margin-left: 44px;
-    background-color: #fef5ed;
-    color: #c69c6d;
-    text-decoration: none;
-    border-radius: 25px;    
-    font-size: 50px;
-    transition: background-color 0.3s ease;
-  }
-  
-  .button-link:hover {
-    background-color: #e0c9a6;
-    transform: scale(1.05);
-  } 
+.square2 {
+  width: 5px;
+  margin-left: 4.4%;
+  top: 20vh;
+  height: 78vh;
+  background-color: #c69c6d;
+  z-index: 2;
+  border-radius: 0px;
+  position: absolute;
+  border-radius: 45px;
+}
 
-   .square2 {
-    width: 97.2%;
-    margin-left: 1.4%;
-    top: 21px;
-    height: 15vh;
-    background-color: #c69c6d;
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0px;
-    position: fixed;
-    border-radius: 45px;
-   }
+.text {
+  font-size: 80px;
+  color: #c69c6d;
+  top: 20vh;
+  left: 6vw;
+  z-index: 0;
+  position: absolute;
+}
+.text2 {
+  font-size: 40px;
+  color: #c69c6d;
+  position: absolute;
+  top: 30vh;
+  left: 6vw;
+  z-index: 0;
+}
+
+.text3 {
+  font-size: 80px;
+  color: #c69c6d;
+  top: 55vh;
+  left: 6vw;
+  z-index: 0;
+  position: absolute;
+}
+.text4 {
+  font-size: 40px;
+  color: #c69c6d;
+  position: absolute;
+  top: 65vh;
+  left: 6vw;
+  z-index: 0;
+}
+
+.text5 {
+  font-size: 40px;
+  color: #c69c6d;
+  position: absolute;
+  top: 80vh;
+  left: 6vw;
+  z-index: 0;
+}
+
+.text6 {
+  font-size: 40px;
+  color: #c69c6d;
+  position: absolute;
+  top: 80vh;
+  left: 36vw;
+  z-index: 0;
+}
