--- a/AboutUsPage.css
+++ b/AboutUsPage.css
@@ -87,7 +87,11 @@ h1
   border: none;
 }
   
-  
+.button-menu:hover {
+  background-color: #e0c9a6;
+  transform: scale(1.05);
+}
+
 .dropdown {
   position: relative;
   display: inline-block;
