--- a/MainPage.css
+++ b/MainPage.css
@@ -73,7 +73,6 @@ h1
   align-items: center;
 }
 
-
 .button-menu{
   display: inline-block;
   padding: 10px 66px;
@@ -87,13 +86,15 @@ h1
   font-family: 'Hangyaboly';
   border: none;
 }
-
+.button-menu:hover {
+  background-color: #e0c9a6;
+  transform: scale(1.05);
+}
 
 .dropdown {
   position: relative;
   display: inline-block;
 }
-
 
 .button-dropdown {
   display: none;
@@ -104,7 +105,7 @@ h1
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   padding: 10px;
   z-index: 1000;
-right: 0;
+  right: 0;
 }
 
 
@@ -114,7 +115,7 @@ right: 0;
   text-decoration: none;
   color: #c69c6d;
   font-size: 24px;
-border-radius: 15px;
+  border-radius: 15px;
 }
 
 
@@ -125,11 +126,8 @@ border-radius: 15px;
 
 .dropdown:hover .button-dropdown {
   display: block;
+  
 }
-
-
-
-
 
 
 .button-link {
