--- a/Sign_up.css
+++ b/Sign_up.css
@@ -173,6 +173,10 @@ h1
     border: none;
   }
   
+  .button-menu:hover {
+    background-color: #e0c9a6;
+    transform: scale(1.05);
+  }
   
   .dropdown {
     position: relative;
