--- a/rec-res.css
+++ b/rec-res.css
@@ -215,4 +215,60 @@ h1
   .dropdown:hover .button-dropdown {
     display: block;
   }
-  
+  .content-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 40px;
+    margin-top: 18vh;
+    padding: 0 40px;
+    flex-wrap: wrap; 
+}
+
+#map {
+    height: 700px;
+    width: 600px;
+    border-radius: 40px;
+}
+
+/*
+#box {
+    background: rgb(249, 247, 246);
+    padding: 40px;
+    border-radius: 45px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 15%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position:relative;
+    top: 20%;
+    left: 40%;
+}
+  */
+.form-container {
+    background: #fff;
+    border-radius: 25px;
+    padding: 30px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    width: 400px;
+    font-family: 'Hangyaboly';
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ 
+    top: 20%;
+    left: 40%;
+}
+@media (max-width: 900px) {
+    .content-wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #map, .form-container {
+        width: 90%;
+    }
+}
